2.11 (0000-00-00)
Application:
- Translations updated: French.

Modules:
- Omicron MATRIX (new): Omicron MATRIX file import support.
- Omicron: Flipped spectra y-coordinates were fixed.
- Polynomial level: Can exclude/include mask when fitting the data.
- Grain statistics: Exports the (previously omitted) last grain too.


2.10 (2008-06-26)
Libraries:
- libgwyddion: Added FD curves

Modules:
- Grain distributions: Possible crashes or bogus resolutions in graph
  plotting mode were fixed.
- Graph fitting: It is possible to plot the curve over the full range even
  when only a subrange is fitted.
- RHK SPM32 (SM2): Support for spectra was added.
- MI file: Reading of ASCII image files was actually implemented.
- Plugin-proxy: Memory overflow in dump file reading was fixed.
- Sensofar (new): Added Sensofar PLu file import module.
- SCIM (new): Added SICM file import module.
- Burleigh BII (new): Added read support for burleigh BII binary file format.
- Surf: Added export to Surf files
- stpfile: Improved support for extended source modes.
- Queasant (new): Added import module
- Indentor analyze

2.9 (2007-10-19)
Application:
- Gtk+ 2.8 and Pango with Cairo rendering support is now required.
- New translation: French.
- Translations updated: Czech, Italian.

Libraries:
- libgwydgets: Gwy3DView uses PangoCairo instead of Pango FT2 for label
  rendering now.
- libgwydgets: Zoom of negative parts of graphs (broken in 2.8) works again.
- libgwydgets: Graph distance measuring dialog uses the correct precision
  for x-distances (instead of y-precision) and no longer displays (bogus)
  angles when x and y are different physical quantities.
- libgwyapp: A new set of functions for checking the consistency of a data
  file (not thorough at this moment).
- libgwyddion: libgwyddion/gwymathfallback.h is the preferred header to
  define the math fallback functions now, for compatibility
  libgwyddion/gwymath.h works too.